individual analysis code and bi table analysis code

--- a/olist_analysis.ipynb
+++ b/olist_analysis.ipynb
@@ -5321,8 +5321,8 @@
     "                COUNT(DISTINCT o.order_id) AS frequency,                  -- total orders\n",
     "                SUM(oi.price) AS monetary                                  -- total GMV\n",
     "            FROM orders o\n",
-    "            JOIN customers c ON o.customer_id = c.customer_id\n",
-    "            JOIN order_items oi ON o.order_id = oi.order_id\n",
+    "            INNER JOIN customers c ON o.customer_id = c.customer_id\n",
+    "            INNER JOIN order_items oi ON o.order_id = oi.order_id\n",
     "            GROUP BY c.customer_unique_id\n",
     "        ),\n",
     "        rfm_with_recency AS (\n",
@@ -5375,7 +5375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 204,
    "id": "ef5b6f6c",
    "metadata": {},
    "outputs": [
@@ -5404,6 +5404,7 @@
        "      <th>num_customers</th>\n",
        "      <th>max_rfm_score</th>\n",
        "      <th>total_gmv</th>\n",
+       "      <th>total_orders</th>\n",
        "      <th>avg_orders</th>\n",
        "      <th>avg_recency_days</th>\n",
        "    </tr>\n",
@@ -5415,51 +5416,57 @@
        "      <td>13968</td>\n",
        "      <td>512</td>\n",
        "      <td>3630575.47</td>\n",
+       "      <td>15147.0</td>\n",
        "      <td>1.08</td>\n",
        "      <td>3040.8</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Hibernating Customers</td>\n",
-       "      <td>18625</td>\n",
+       "      <td>18626</td>\n",
        "      <td>322</td>\n",
-       "      <td>2975550.27</td>\n",
+       "      <td>2975256.84</td>\n",
+       "      <td>19184.0</td>\n",
        "      <td>1.03</td>\n",
        "      <td>2839.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Potential Loyalist</td>\n",
-       "      <td>12063</td>\n",
+       "      <td>12060</td>\n",
        "      <td>553</td>\n",
-       "      <td>2084585.45</td>\n",
+       "      <td>2084316.20</td>\n",
+       "      <td>12060.0</td>\n",
        "      <td>1.00</td>\n",
-       "      <td>3044.1</td>\n",
+       "      <td>3044.2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Other</td>\n",
-       "      <td>4133</td>\n",
+       "      <td>4134</td>\n",
        "      <td>131</td>\n",
-       "      <td>1621533.30</td>\n",
+       "      <td>1623066.97</td>\n",
+       "      <td>4738.0</td>\n",
        "      <td>1.15</td>\n",
        "      <td>2752.7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>About To Sleep</td>\n",
-       "      <td>1225</td>\n",
+       "      <td>1224</td>\n",
        "      <td>331</td>\n",
-       "      <td>968545.48</td>\n",
+       "      <td>967370.49</td>\n",
+       "      <td>1480.0</td>\n",
        "      <td>1.21</td>\n",
        "      <td>2885.2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>At Risk</td>\n",
-       "      <td>10837</td>\n",
+       "      <td>10836</td>\n",
        "      <td>255</td>\n",
-       "      <td>592874.25</td>\n",
+       "      <td>592901.46</td>\n",
+       "      <td>10836.0</td>\n",
        "      <td>1.00</td>\n",
        "      <td>2813.1</td>\n",
        "    </tr>\n",
@@ -5469,15 +5476,17 @@
        "      <td>3876</td>\n",
        "      <td>523</td>\n",
        "      <td>500137.76</td>\n",
+       "      <td>4311.0</td>\n",
        "      <td>1.11</td>\n",
        "      <td>3166.4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
        "      <td>Loyal</td>\n",
-       "      <td>11453</td>\n",
+       "      <td>11456</td>\n",
        "      <td>444</td>\n",
-       "      <td>499112.29</td>\n",
+       "      <td>499289.08</td>\n",
+       "      <td>11456.0</td>\n",
        "      <td>1.00</td>\n",
        "      <td>2959.4</td>\n",
        "    </tr>\n",
@@ -5487,6 +5496,7 @@
        "      <td>11477</td>\n",
        "      <td>555</td>\n",
        "      <td>402653.33</td>\n",
+       "      <td>11477.0</td>\n",
        "      <td>1.00</td>\n",
        "      <td>3130.4</td>\n",
        "    </tr>\n",
@@ -5496,6 +5506,7 @@
        "      <td>7596</td>\n",
        "      <td>215</td>\n",
        "      <td>304431.91</td>\n",
+       "      <td>7810.0</td>\n",
        "      <td>1.03</td>\n",
        "      <td>2750.8</td>\n",
        "    </tr>\n",
@@ -5505,6 +5516,7 @@
        "      <td>167</td>\n",
        "      <td>534</td>\n",
        "      <td>11644.19</td>\n",
+       "      <td>167.0</td>\n",
        "      <td>1.00</td>\n",
        "      <td>3034.3</td>\n",
        "    </tr>\n",
@@ -5515,32 +5527,32 @@
       "text/plain": [
        "         customer_segment  num_customers max_rfm_score   total_gmv  \\\n",
        "0           New Customers          13968           512  3630575.47   \n",
-       "1   Hibernating Customers          18625           322  2975550.27   \n",
-       "2      Potential Loyalist          12063           553  2084585.45   \n",
-       "3                   Other           4133           131  1621533.30   \n",
-       "4          About To Sleep           1225           331   968545.48   \n",
-       "5                 At Risk          10837           255   592874.25   \n",
+       "1   Hibernating Customers          18626           322  2975256.84   \n",
+       "2      Potential Loyalist          12060           553  2084316.20   \n",
+       "3                   Other           4134           131  1623066.97   \n",
+       "4          About To Sleep           1224           331   967370.49   \n",
+       "5                 At Risk          10836           255   592901.46   \n",
        "6               Promising           3876           523   500137.76   \n",
-       "7                   Loyal          11453           444   499112.29   \n",
+       "7                   Loyal          11456           444   499289.08   \n",
        "8               Champions          11477           555   402653.33   \n",
        "9        Cannot Lose Them           7596           215   304431.91   \n",
        "10         Need Attention            167           534    11644.19   \n",
        "\n",
-       "    avg_orders  avg_recency_days  \n",
-       "0         1.08            3040.8  \n",
-       "1         1.03            2839.0  \n",
-       "2         1.00            3044.1  \n",
-       "3         1.15            2752.7  \n",
-       "4         1.21            2885.2  \n",
-       "5         1.00            2813.1  \n",
-       "6         1.11            3166.4  \n",
-       "7         1.00            2959.4  \n",
-       "8         1.00            3130.4  \n",
-       "9         1.03            2750.8  \n",
-       "10        1.00            3034.3  "
+       "    total_orders  avg_orders  avg_recency_days  \n",
+       "0        15147.0        1.08            3040.8  \n",
+       "1        19184.0        1.03            2839.0  \n",
+       "2        12060.0        1.00            3044.2  \n",
+       "3         4738.0        1.15            2752.7  \n",
+       "4         1480.0        1.21            2885.2  \n",
+       "5        10836.0        1.00            2813.1  \n",
+       "6         4311.0        1.11            3166.4  \n",
+       "7        11456.0        1.00            2959.4  \n",
+       "8        11477.0        1.00            3130.4  \n",
+       "9         7810.0        1.03            2750.8  \n",
+       "10         167.0        1.00            3034.3  "
       ]
      },
-     "execution_count": 190,
+     "execution_count": 204,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5556,8 +5568,8 @@
     "                COUNT(DISTINCT o.order_id) AS frequency,                  -- total orders\n",
     "                SUM(oi.price) AS monetary                                 -- total GMV\n",
     "            FROM orders o\n",
-    "            JOIN customers c ON o.customer_id = c.customer_id\n",
-    "            JOIN order_items oi ON o.order_id = oi.order_id\n",
+    "            INNER JOIN customers c ON o.customer_id = c.customer_id\n",
+    "            INNER JOIN order_items oi ON o.order_id = oi.order_id\n",
     "            GROUP BY c.customer_unique_id\n",
     "        ),\n",
     "        rfm_with_recency AS (\n",
@@ -5604,6 +5616,7 @@
     "            COUNT(customer_unique_id) AS num_customers,\n",
     "            MAX(rfm_score) as max_rfm_score,\n",
     "            SUM(monetary) AS total_gmv,\n",
+    "            SUM(frequency) AS total_orders,\n",
     "            ROUND(AVG(frequency), 2) AS avg_orders,\n",
     "            ROUND(AVG(recency_days), 1) AS avg_recency_days\n",
     "        FROM rfm_segmented\n",
@@ -5615,6 +5628,14 @@
     ")\n",
     "\n",
     "df_rfm_segments_summary"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6d86b9d9",
+   "metadata": {},
+   "source": [
+    "most customers placed 1 order. new customers contributed the most to total gmv based on RFM."
    ]
   },
   {
