--- a/olist_analysis_for_bi.ipynb
+++ b/olist_analysis_for_bi.ipynb
@@ -1432,7 +1432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": null,
    "id": "65c9d316",
    "metadata": {},
    "outputs": [
@@ -1578,8 +1578,8 @@
     "                COUNT(DISTINCT o.order_id) AS frequency,                  -- total orders\n",
     "                SUM(oi.price) AS monetary                                 -- total GMV\n",
     "            FROM orders o\n",
-    "            JOIN customers c ON o.customer_id = c.customer_id\n",
-    "            JOIN order_items oi ON o.order_id = oi.order_id\n",
+    "            INNER JOIN customers c ON o.customer_id = c.customer_id\n",
+    "            INNER JOIN order_items oi ON o.order_id = oi.order_id\n",
     "            GROUP BY c.customer_unique_id\n",
     "        ),\n",
     "        rfm_with_recency AS (\n",
@@ -1618,12 +1618,6 @@
     "            END AS customer_segment\n",
     "        FROM rfm_codes;\n",
     "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
     "    \"\"\"\n",
     ")\n",
     "\n",
@@ -1633,7 +1627,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "89f5912f",
+   "id": "e4b42f14",
    "metadata": {},
    "outputs": [],
    "source": []
