--- a/olist_analysis_for_bi.ipynb
+++ b/olist_analysis_for_bi.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 93,
    "id": "d9fb3455",
    "metadata": {},
    "outputs": [],
@@ -29,6 +29,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 94,
+   "id": "26f1b6f3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "BI_FOLDER_PATH = \"bi_outputs/\""
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "5e79768d",
    "metadata": {},
@@ -38,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 95,
    "id": "3080d169",
    "metadata": {},
    "outputs": [],
@@ -80,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 96,
    "id": "51175405",
    "metadata": {},
    "outputs": [
@@ -205,7 +215,7 @@
        "4                         0                                  0  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -265,6 +275,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 97,
+   "id": "b58d81c7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_sellers_performance.to_csv(f'{BI_FOLDER_PATH}bi_seller_performance.csv', index=False)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "f7e5b676",
    "metadata": {},
@@ -274,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 98,
    "id": "e20f684d",
    "metadata": {},
    "outputs": [
@@ -392,7 +412,7 @@
        "4               119                  0.02  "
       ]
      },
-     "execution_count": 35,
+     "execution_count": 98,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -475,6 +495,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 99,
+   "id": "b6556bb3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_products_performance.to_csv(f'{BI_FOLDER_PATH}bi_product_performance.csv', index=False)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "3089c1e1",
    "metadata": {},
@@ -484,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 127,
    "id": "a51bfdb4",
    "metadata": {},
    "outputs": [
@@ -583,7 +613,7 @@
        "4         1998  234223.40  "
       ]
      },
-     "execution_count": 27,
+     "execution_count": 127,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -622,11 +652,11 @@
     "            THEN mc.customer_unique_id \n",
     "        END) AS repeat_customers,\n",
     "        ROUND(\n",
-    "            COUNT(CASE \n",
+    "            COUNT(DISTINCT CASE \n",
     "                WHEN fo.first_order_date < mc.order_month \n",
     "                THEN mc.customer_unique_id \n",
     "            END)::numeric \n",
-    "            / COUNT(mc.customer_unique_id),\n",
+    "            / COUNT(DISTINCT mc.customer_unique_id),\n",
     "            2\n",
     "        ) AS repeat_buyer_rate,\n",
     "        COUNT(mc.order_id) AS order_count,                                                               -- total orders per month\n",
@@ -651,7 +681,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 128,
+   "id": "9fb62a14",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "month_num\n",
+      "1     0.02\n",
+      "2     0.02\n",
+      "3     0.02\n",
+      "4     0.03\n",
+      "5     0.04\n",
+      "6     0.04\n",
+      "7     0.04\n",
+      "8     0.04\n",
+      "9     0.66\n",
+      "10    0.77\n",
+      "11    0.02\n",
+      "12    0.02\n",
+      "Name: repeat_buyer_rate, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_monthly_trend['month_num'] = df_monthly_trend['order_month'].dt.month\n",
+    "monthly_repeat_rate_sum = df_monthly_trend.groupby('month_num')['repeat_buyer_rate'].sum()\n",
+    "print(monthly_repeat_rate_sum)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "id": "e134124f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Timestamp('2018-10-01 00:00:00')"
+      ]
+     },
+     "execution_count": 119,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_monthly_trend['order_month'].max()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "id": "9d7654db",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_monthly_trend.to_csv(f'{BI_FOLDER_PATH}bi_monthly_trend.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
    "id": "4af90b31",
    "metadata": {},
    "outputs": [
@@ -725,7 +819,7 @@
        "4     sao paulo  2017-11-01           1118"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -749,6 +843,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 116,
+   "id": "459b8535",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_active_buyers.to_csv(f'{BI_FOLDER_PATH}bi_active_buyers.csv', index=False)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "0b13f484",
    "metadata": {},
@@ -758,7 +862,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 104,
    "id": "2919e3b7",
    "metadata": {},
    "outputs": [
@@ -845,7 +949,7 @@
        "4                 1  "
       ]
      },
-     "execution_count": 28,
+     "execution_count": 104,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -876,6 +980,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 105,
+   "id": "629683d9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_new_vs_return_customers.to_csv(f'{BI_FOLDER_PATH}bi_new_vs_return_customers.csv', index=False)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "690f6740",
    "metadata": {},
@@ -891,7 +1005,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 106,
    "id": "cdb0eb86",
    "metadata": {},
    "outputs": [
@@ -971,7 +1085,7 @@
        "4 2017-02-01          1780               17           0.955056"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 106,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -997,7 +1111,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 107,
+   "id": "210d3b0e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_cancellation_metrics_over_time.to_csv(f'{BI_FOLDER_PATH}bi_cancellation_metrics_over_time.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
    "id": "e2b69b32",
    "metadata": {},
    "outputs": [
@@ -1102,7 +1226,7 @@
        "4                  7  2017-02-01             1     0.142857  "
       ]
      },
-     "execution_count": 36,
+     "execution_count": 108,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1151,6 +1275,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 109,
+   "id": "c2e8b562",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_cancellation_metrics_by_seller.to_csv(f'{BI_FOLDER_PATH}bi_cancellation_metrics_by_seller.csv', index=False)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "50c00089",
    "metadata": {},
@@ -1164,7 +1298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 110,
    "id": "adc4b54d",
    "metadata": {},
    "outputs": [
@@ -1257,7 +1391,7 @@
        "4  bfd27a966d91cfaafdb25d076585f0da      10.021285  "
       ]
      },
-     "execution_count": 79,
+     "execution_count": 110,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1285,7 +1419,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 111,
+   "id": "af71181e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_avg_delivery_time.to_csv(f'{BI_FOLDER_PATH}bi_avg_delivery_time.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
    "id": "42fa4137",
    "metadata": {},
    "outputs": [
@@ -1314,7 +1458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 113,
    "id": "381387ef",
    "metadata": {},
    "outputs": [
@@ -1412,7 +1556,7 @@
        "2134           machadinho      65.791597"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 113,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1432,7 +1576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 114,
    "id": "65c9d316",
    "metadata": {},
    "outputs": [
@@ -1476,7 +1620,7 @@
        "      <td>2018-09-03 09:06:57</td>\n",
        "      <td>2</td>\n",
        "      <td>290.00</td>\n",
-       "      <td>2701.0</td>\n",
+       "      <td>2702.0</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
@@ -1489,7 +1633,7 @@
        "      <td>2018-08-29 14:18:23</td>\n",
        "      <td>1</td>\n",
        "      <td>418.00</td>\n",
-       "      <td>2706.0</td>\n",
+       "      <td>2707.0</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
@@ -1502,7 +1646,7 @@
        "      <td>2018-08-29 09:48:09</td>\n",
        "      <td>1</td>\n",
        "      <td>169.80</td>\n",
-       "      <td>2706.0</td>\n",
+       "      <td>2707.0</td>\n",
        "      <td>1</td>\n",
        "      <td>2</td>\n",
        "      <td>2</td>\n",
@@ -1515,7 +1659,7 @@
        "      <td>2018-08-29 08:46:11</td>\n",
        "      <td>1</td>\n",
        "      <td>457.75</td>\n",
-       "      <td>2706.0</td>\n",
+       "      <td>2707.0</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
@@ -1528,7 +1672,7 @@
        "      <td>2018-08-29 14:52:00</td>\n",
        "      <td>1</td>\n",
        "      <td>24.90</td>\n",
-       "      <td>2706.0</td>\n",
+       "      <td>2707.0</td>\n",
        "      <td>1</td>\n",
        "      <td>3</td>\n",
        "      <td>5</td>\n",
@@ -1548,11 +1692,11 @@
        "4  b701bebbdf478f5500348f03aff62121 2018-08-29 14:52:00          1     24.90   \n",
        "\n",
        "   recency_days  recency_score  frequency_score  monetary_score rfm_score  \\\n",
-       "0        2701.0              1                1               1       111   \n",
-       "1        2706.0              1                1               1       111   \n",
-       "2        2706.0              1                2               2       122   \n",
-       "3        2706.0              1                1               1       111   \n",
-       "4        2706.0              1                3               5       135   \n",
+       "0        2702.0              1                1               1       111   \n",
+       "1        2707.0              1                1               1       111   \n",
+       "2        2707.0              1                2               2       122   \n",
+       "3        2707.0              1                1               1       111   \n",
+       "4        2707.0              1                3               5       135   \n",
        "\n",
        "        customer_segment  \n",
        "0                  Other  \n",
@@ -1562,7 +1706,7 @@
        "4                At Risk  "
       ]
      },
-     "execution_count": 83,
+     "execution_count": 114,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1626,11 +1770,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 115,
    "id": "e4b42f14",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df_rfm_segments.to_csv(f'{BI_FOLDER_PATH}bi_rfm_segments.csv', index=False)"
+   ]
   }
  ],
  "metadata": {
