--- a/analysis_notebooks/olist_analysis_for_bi.ipynb
+++ b/analysis_notebooks/olist_analysis_for_bi.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 5,
    "id": "d9fb3455",
    "metadata": {},
    "outputs": [],
@@ -38,12 +38,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": null,
    "id": "26f1b6f3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "BI_FOLDER_PATH = \"bi_outputs/\""
+    "BI_FOLDER_PATH = \"raw/processed/\""
    ]
   },
   {
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 7,
    "id": "3080d169",
    "metadata": {},
    "outputs": [],
@@ -98,136 +98,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": null,
    "id": "51175405",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>seller_id</th>\n",
-       "      <th>total_order_count</th>\n",
-       "      <th>total_delivered_order_count</th>\n",
-       "      <th>distinct_total_order_item_count</th>\n",
-       "      <th>distinct_delivered_order_item_count</th>\n",
-       "      <th>delivered_items_gmv</th>\n",
-       "      <th>total_order_cancel_count</th>\n",
-       "      <th>distinct_order_items_cancel_count</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0015a82c2db000af6aaaf3ae2ecb0532</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2685.00</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>001cca7ae9ae17fb1caed9dfb1094831</td>\n",
-       "      <td>200</td>\n",
-       "      <td>195</td>\n",
-       "      <td>5</td>\n",
-       "      <td>5</td>\n",
-       "      <td>24487.03</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>001e6ad469a905060d959994f1b41e4f</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>002100f778ceb8431b7a1020ff7ab48f</td>\n",
-       "      <td>51</td>\n",
-       "      <td>50</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1216.60</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>003554e2dce176b5555353e4f3555ac8</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>120.00</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                          seller_id  total_order_count  \\\n",
-       "0  0015a82c2db000af6aaaf3ae2ecb0532                  3   \n",
-       "1  001cca7ae9ae17fb1caed9dfb1094831                200   \n",
-       "2  001e6ad469a905060d959994f1b41e4f                  1   \n",
-       "3  002100f778ceb8431b7a1020ff7ab48f                 51   \n",
-       "4  003554e2dce176b5555353e4f3555ac8                  1   \n",
-       "\n",
-       "   total_delivered_order_count  distinct_total_order_item_count  \\\n",
-       "0                            3                                1   \n",
-       "1                          195                                5   \n",
-       "2                            0                                1   \n",
-       "3                           50                                2   \n",
-       "4                            1                                1   \n",
-       "\n",
-       "   distinct_delivered_order_item_count  delivered_items_gmv  \\\n",
-       "0                                    1              2685.00   \n",
-       "1                                    5             24487.03   \n",
-       "2                                    0                 0.00   \n",
-       "3                                    2              1216.60   \n",
-       "4                                    1               120.00   \n",
-       "\n",
-       "   total_order_cancel_count  distinct_order_items_cancel_count  \n",
-       "0                         0                                  0  \n",
-       "1                         0                                  0  \n",
-       "2                         1                                  1  \n",
-       "3                         0                                  0  \n",
-       "4                         0                                  0  "
-      ]
-     },
-     "execution_count": 96,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df_sellers_performance = run_query(\n",
     "    \"\"\"\n",
@@ -284,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": null,
    "id": "b58d81c7",
    "metadata": {},
    "outputs": [],
